@@ -120,29 +120,29 @@ namespace urbi
       {
 	UVariable *v = new UVariable(name.c_str(), new ::UValue());
 	if (v)
-        {
-          if (owned)
-            v->internalTargetBinder.push_back(this);
-          else
-            v->internalBinder.push_back(this);
-        }
+	{
+	  if (owned)
+	    v->internalTargetBinder.push_back(this);
+	  else
+	    v->internalBinder.push_back(this);
+	}
       }
       else
       {
-        if (owned)
-          it->second->internalTargetBinder.push_back(this);
-        else
+	if (owned)
+	  it->second->internalTargetBinder.push_back(this);
+	else
 	{
-          it->second->internalBinder.push_back(this);
-          if ( !it->second->internalAccessBinder.empty ()
-               && std::find (::urbiserver->access_and_change_varlist.begin (),
-                             ::urbiserver->access_and_change_varlist.end (),
-                             it->second) ==
-               ::urbiserver->access_and_change_varlist.end ())
-          {
-            it->second->access_and_change = true;
-            ::urbiserver->access_and_change_varlist.push_back (it->second);
-          }
+	  it->second->internalBinder.push_back(this);
+	  if ( !it->second->internalAccessBinder.empty ()
+	       && std::find (::urbiserver->access_and_change_varlist.begin (),
+			     ::urbiserver->access_and_change_varlist.end (),
+			     it->second) ==
+	       ::urbiserver->access_and_change_varlist.end ())
+	  {
+	    it->second->access_and_change = true;
+	    ::urbiserver->access_and_change_varlist.push_back (it->second);
+	  }
 	}
       }
     }
